Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2422

Creator should not try to restore git commit window when loading session

XMLWordPrintable

    • 3b2614c6976ff1b201855893a811702376721eb9

      1. Open a session which contains files checked in to git.
      2. Change some file, open the commit window ( Tools / Git / Commit... )
      3. Close Creator. When you're asked if you'd like to commit the change, answer "No".
      4. Start Creator, open the said session.

      Creator will then try to restore the git commit window and thus complain about a missing temporary file. Instead, Creator should not try to open the git commit window again as the user explicitly discarded it.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes