Session: Do not save temporary editors

Do not save temporary editors in the session. Chances are high
that files opened in those editors are not around when the
session is reopened.

Task-number: QTCREATORBUG-2422